# zadanie-szwch

./: .gitignore  manage.py  pyproject.toml
.github/workflows/: test.yml
CloudSchoolLinkShortener/: app.py  models.py  settings.py  tests.py  wsgi.py
CloudSchoolLinkShortener/migrations/: 0001_initial.py
